# AIZenGate

./: .env.example  .gitignore  AI_ZenGate.md  ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_LOG.md  LICENSE  Makefile  README.md  docker-compose.yml  go.mod
.github/workflows/: ci.yml
adk/: compare_models.py  config.py  pyproject.toml  test_llm.py
adk/.zengate-adk-memory/: pipeline_1781461939.json  pipeline_1781493702.json  pipeline_1781493931.json  pipeline_1781494017.json  pipeline_1781494047.json  pipeline_1781494098.json  pipeline_1781494190.json  pipeline_1781494269.json  pipeline_1781494632.json  pipeline_1781494753.json  pipeline_1781504056.json  pipeline_1781504490.json  pipeline_1781504526.json  pipeline_1781504686.json  pipeline_1781505117.json  pipeline_1781508713.json  pipeline_1781508747.json  pipeline_1781510318.json  pipeline_1781520131.json  pipeline_1781521169.json  pipeline_1781525835.json  pipeline_1781527267.json  pipeline_1781535372.json  pipeline_1781535944.json  pipeline_1781540511.json  pipeline_1781540945.json
adk/agents/: __init__.py  architect.py  codegen.py  docwriter.py  orchestrator.py  reviewer.py  tester.py
brain/: config.go  gemini.go
cmd/gateway/: main.go
deploy/prometheus/: prometheus.yml
docs/: api-auth.md  api.md  brain_api.md  deployment.md  examples.md
docs/api/: brain.md
docs/specs/: architect_spec_1781495159.md  architect_spec_1781500965.md  architect_spec_1781501203.md  architect_spec_1781502172.md  architect_spec_1781504062.md  architect_spec_1781504505.md  (+18 more)
k6/: load_test.js
scratch/: load_test.py
(+49 files in other folders)
