[project]
name = "zengate-adk"
version = "0.1.0"
description = "ZenGate AI — Multi-Agent Development Pipeline (Google ADK)"
requires-python = ">=3.11"

dependencies = [
    "google-adk>=1.0.0",
    "google-generativeai>=0.8.0",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
